--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
             android:theme="@style/Theme.ProjetoDevAndroid"
             tools:targetApi="31">
         <activity
+                android:name=".CadastroPorteiro"
+                android:exported="false" />
+        <activity
+                android:name=".CadastroProfessor"
+                android:exported="false" />
+        <activity
                 android:name=".ReservaDeChaves"
                 android:exported="false" />
         <activity
